test_datasets/generated/syntax_errors/error_4.py
def process_data(data):
    result = sum(data  # ERROR: Missing closing paren
    return result
